# zaphiro-powergrid-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose-test.yml  docker-compose.yml  entrypoint.sh  idea.md  pyproject.toml
alembic/: env.py
alembic/versions/: 06b3263a9d5d_initial.py  957314f565d4_initial.py
app/: main.py  report_worker.py
app/api/: deps.py
app/api/routes/: auth.py  components.py  measurements.py  reports.py
app/core/: config.py  security.py
app/db/: connection.py
app/models/: __init__.py  components.py  measurements.py  reports.py  users.py
app/schemas/: components.py  measurements.py  reports.py  users.py
app/scripts/: seed_users.py
app/services/: components.py  measurements.py  users.py
app/tests/: auth.py  config.py  conftest.py  test_components.py  test_measurements.py  test_report_worker.py  test_reports.py  test_reports_heavy.py  utils.py
